"""
Migration initiale pour l'application caisse.

Cette migration crée les modèles suivants :
- Magasin
- Produit
- Stock
- Vente
- VenteProduit
"""

# Generated by Django 5.2.1 on 2025-05-31 17:09

import django.db.models.deletion
import django.utils.timezone
from django.db import migrations, models


class Migration(migrations.Migration):
    """Migration initiale pour la base de données de l'application caisse."""

    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name='Magasin',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True,
                                           serialize=False, verbose_name='ID')),
                ('nom', models.CharField(max_length=100)),
                ('quartier', models.CharField(max_length=100)),
                ('type', models.CharField(max_length=50)),
            ],
        ),
        migrations.CreateModel(
            name='Produit',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True,
                                           serialize=False, verbose_name='ID')),
                ('nom', models.CharField(max_length=100)),
                ('prix', models.FloatField()),
                ('description', models.TextField(blank=True)),
            ],
        ),
        migrations.CreateModel(
            name='Stock',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True,
                                           serialize=False, verbose_name='ID')),
                ('quantite', models.IntegerField()),
                ('magasin', models.ForeignKey(
                    on_delete=django.db.models.deletion.CASCADE,
                    related_name='stocks',
                    to='caisse.magasin')),
                ('produit', models.ForeignKey(
                    on_delete=django.db.models.deletion.CASCADE,
                    related_name='stocks',
                    to='caisse.produit')),
            ],
        ),
        migrations.CreateModel(
            name='Vente',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True,
                                           serialize=False, verbose_name='ID')),
                ('date_heure', models.DateTimeField(default=django.utils.timezone.now)),
                ('total', models.FloatField()),
                ('magasin', models.ForeignKey(
                    on_delete=django.db.models.deletion.CASCADE,
                    related_name='ventes',
                    to='caisse.magasin')),
            ],
        ),
        migrations.CreateModel(
            name='VenteProduit',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True,
                                           serialize=False, verbose_name='ID')),
                ('quantite', models.IntegerField()),
                ('prix_unitaire', models.FloatField()),
                ('produit', models.ForeignKey(
                    on_delete=django.db.models.deletion.CASCADE,
                    to='caisse.produit')),
                ('vente', models.ForeignKey(
                    on_delete=django.db.models.deletion.CASCADE,
                    related_name='produits',
                    to='caisse.vente')),
            ],
        ),
    ]
